// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render body small text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-6 typography-color-7 typography-weight-8 typography-strong-9 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-1 typography-color-2 typography-weight-3 typography-strong-4 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text medium weight 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-31 typography-color-32 typography-weight-33 typography-strong-34 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text truncated 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<div
  class="c0"
  style="width: 90px;"
>
  <span
    class="typography-basekick-36 typography-color-37 typography-weight-38 typography-strong-39 -span c1"
    data-id="text"
  >
    <div
      class="MuiBox-root MuiBox-root-42 typography-truncate-40"
    >
      Truncated text
    </div>
  </span>
</div>
`;

exports[`It can render subtitle caption text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-21 typography-color-22 typography-weight-23 typography-strong-24 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle overline text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-26 typography-color-27 typography-weight-28 typography-strong-29 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle small text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-16 typography-color-17 typography-weight-18 typography-strong-19 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-basekick-11 typography-color-12 typography-weight-13 typography-strong-14 -span c0"
  data-id="text"
>
  Body Text
</span>
`;
